--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo sitio web</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <hi>Bienvenidos a nuestro sitio web</hi>
+    <h1>Bienvenidos a nuestro sitio web</h1>
+    <script src="./js/main.js"></script>
 </body>
 </html>
